Starting integrating bookdoc